# src/Domain/Dto/Authentication/SignInDto.cs
@@ -1,0 +1,6 @@
+﻿using Microsoft.AspNetCore.Identity;
+
+namespace Domain.Dto.Authentication;
+
+public record SignInDto(string Email, string UserName, string Password, bool RememberMe);
+public record SignInResponseDto(IdentityUser? User);
